学习地图点，转python

--- a/学习笔记/学习笔记.md
+++ b/学习笔记/学习笔记.md
@@ -2,20 +2,26 @@
 
 最大后延=最大似然\*先验
 
+padding 有bug，没用到padding
+
 # 专有名词
 
-| Grab | 给成员变量赋值 |      |
-| ---- | -------------- | ---- |
-|      |                |      |
-|      |                |      |
-|      |                |      |
+
+| Grab | 给成员变量赋值 |  |
+| ------ | ---------------- | -- |
+|      |                |  |
+|      |                |  |
+|      |                |  |
 
 # 概念
+
 + 关键帧
 + 地图 什么情况下新建一个地图？
 
 # 函数调用栈
+
 ## 跟踪线程
+
 + TrackMonocular
   + resize image
   + Check mode change
@@ -31,16 +37,19 @@
       + 当前时间戳大于上一次时间戳1s，如果是惯性：如果IniertialBA2，则CreateMapInAtlas()，否则ResetActiveMap()，之后**返回**
       + 如果还没mbCreatedMap，则PreintegrateIMU()
       + 加更新地图的锁pCurrentMap->mMutexMapUpdate
+
 ## 局部建图线程
+
 + 数据结构
+
   + mpCurrentKeyFrame:KeyFrame* 当前关键帧，有指向前一个关键帧的指针，后面我也把他称为关键帧链表
   + IMU相关
     + mTinit IMU初始化所用的第一帧和最后一帧的时间差
     + mRwg
     + mbg 当前关键帧（mpCurrentKeyFrame）的陀螺仪（Gyro）偏置
     + mga 当前关键帧（mpCurrentKeyFrame）的加速度计（Acc）偏置
-
 + LocalMapping::Run 死循环
+
   + SetAcceptKeyFrames 告诉Tracking，LocalMapping正处于繁忙状态，请不要给我发送关键帧打扰我
   + 如果 处理的关键帧列表不为空 并且imu正常
     + **Step 2** ProcessNewKeyFrame 处理列表中的关键帧，包括计算BoW、更新观测、描述子、共视图，插入到地图等
@@ -79,9 +88,9 @@
     + **Step 10** 将当前帧加入到闭环检测队列中
   + 否则 线程相关杂项处理
   + SetAcceptKeyFrames 开始接收关键帧
-
 + InitializeIMU IMU初始化与地图相关，一个地图初始化一次
-  + **1**初始化条件 
+
+  + **1**初始化条件
     + atlas的KeyFramesInMap数量大于10，
     + 当前mpCurrentKeyFrame的关键帧链表的关键帧数量大于10
     + 第一个和关键帧最后一个关键帧时间差大于单目20s，双目10s
@@ -93,7 +102,7 @@
     + 求dirG dirG是什么，TODO这部分数学运算没看懂
     + 获得重力方向到当前速度方向的旋转向量，更新mRwg
   + **2**否则
-    + mRwg置为单位阵，mbg和mba置为当前关键帧的陀螺仪和加速度计的偏置 
+    + mRwg置为单位阵，mbg和mba置为当前关键帧的陀螺仪和加速度计的偏置
   + **3**Optimizer::InertialOptimization 计算残差及偏置差，优化尺度重力方向及速度偏置，偏置先验为0，双目时不优化尺度
   + mScale<1e-1 被认为更新失败
   + 到此时为止，前面做的东西没有改变map，然后锁map，更新当前map
@@ -119,5 +128,4 @@
       + 从当前队列lpKFtoCheck中移除这个帧
   + **8** 更新三维点，三维点在优化后同样没有正式的更新，而是找了个中间变量保存了优化后的数值
   + **9** 再有新的来就不要了~不然陷入无限套娃了
-
 + ProcessNewKeyFrame
