--- a/学习笔记/地图点.md
+++ b/学习笔记/地图点.md
@@ -35,7 +35,7 @@ https://blog.csdn.net/ncepu_Chen/article/details/116784652
   + 构造函数中，构造这个地图点的关键帧
   + 如果被删除，随便取一个(实际取的是根据指针排序的第一个，因为指针的顺序未知，所以是随便取的：mObservations.begin()->first)
   +
-+ 地图点描述子的计算 ComputeDistinctiveDescriptors
++ 地图点描述子的计算 `ComputeDistinctiveDescriptors`
 
   1. 获取所有观测，跳过坏点
   2. 遍历观测到3d点的所有关键帧，获得orb描述子，并插入到vDescriptors中
