--- a/学习笔记/学习笔记.md
+++ b/学习笔记/学习笔记.md
@@ -129,3 +129,7 @@ padding 有bug，没用到padding
   + **8** 更新三维点，三维点在优化后同样没有正式的更新，而是找了个中间变量保存了优化后的数值
   + **9** 再有新的来就不要了~不然陷入无限套娃了
 + ProcessNewKeyFrame
+
+## 一些思考和改进
+1. 绝大部分字典改成哈希表
+2. 字典的键存的地图点、关键帧的时候用的指针，应该根据id自定义hash函数和operator \<，用id去定义，这样不会因为指针地址随机分配有随机性 
