--- a/学习笔记/学习笔记.md
+++ b/学习笔记/学习笔记.md
@@ -127,7 +127,7 @@ padding 有bug，没用到padding
       + 更新当前帧的速度
       + 从当前队列lpKFtoCheck中移除这个帧
   + **8** 更新三维点，三维点在优化后同样没有正式的更新，而是找了个中间变量保存了优化后的数值
-  + **9** 再有新的来就不要了~不然陷入无限套娃了
+  + **9** 再有新来的就不要了~不然陷入无限套娃了
 + ProcessNewKeyFrame
 
 ## 一些思考和改进
