--- a/学习笔记/帧.md
+++ b/学习笔记/帧.md
@@ -16,6 +16,11 @@
 + 左目特征点对应的右目特征点的横坐标（左右目纵坐标相同） `std::vector<float> mvuRight`
 + 特征点深度 `std::vector<float> mvDepth;`
 + 近点远点阈值 `mThDepth` 在双目（和RGBD?）中，因为远的点不准，远的匹配的的点被视为单目点
++ 地图点 `vector<MapPoint *> mvpMapPoints`
+  + 双目和RGBD才用到？
+  + 如果为空，代表在`Tracking::UpdateLastFrame`中创建，作为临时地图点
+  + 为空指针代表没有三角化成功
+
 
 ## 函数
 
@@ -44,6 +49,8 @@
   两个相机模式 id小于Nleft的点被认为是左目，大于等于的被认为是右目。`mvKeysRight``mvGridRight`都是针对两个相机模式加的  
   特征点匹配的时候加速计算，只匹配特征点所在中心3x3的网格  
 + 构造函数
+
+## 参考关键帧
 
 ## 用途
 
