--- a/学习笔记/地图点.md
+++ b/学习笔记/地图点.md
@@ -46,6 +46,14 @@ https://blog.csdn.net/ncepu_Chen/article/details/116784652
   + SetBadFlag 标记mbBad
   + Replace 替换mpReplaced
 
++ 召回率相关变量
+  + 实际观测到该地图点的帧数 `int MapPoint::mnFound`
+  + 理论上应当观测到该地图点的帧数 `int MapPoint::mnVisible`
+  + 调用时机
+    + 在函数`Tracking::SearchLocalPoints()`中，会对所有处于当前帧视锥内的地图点调用成员函数`MapPoint::IncreaseVisible()`.(这些点未必真的被当前帧观测到了,只是地理位置上处于当前帧视锥范围内).
+    + 在函数`Tracking::TrackLocalMap()`中，会对所有当前帧观测到的地图点调用`MaoPoint::IncreaseFound()`
+    + 在函数`LocalMapping::MapPointCulling()`中，根据召回率判断这点是否要被剔除
+
 ## MapPoint生命周期(ORB-SLAM2)
 
 ![](./MapPoint.png)
