--- a/学习笔记/帧.md
+++ b/学习笔记/帧.md
@@ -28,7 +28,8 @@
 + 双目 & RGBD预处理
   ![](./matcher.png)
 + 双目特征点的处理:特征点匹配 `ComputeStereoMatches()`
-  初始化的时候做了极线匹配，使得左目上的点在右目中有？
+  初始化的时候做了极线匹配，使得左目上的点在右目中有？  
+  老版euroc ros有极线匹配的代码，orb slam3 euroc没有
 
   1. 粗匹配: 根据特征点**描述子距离**（汉明距离）和**金字塔层级**判断匹配.粗匹配关系是按行寻找的,对于左目图像中每个特征点,在右目图像对应行上寻找匹配特征点.
   2. 精匹配: 根据特征点**周围窗口内容**相似度判断匹配。两个匹配上的特征点，以此为中心画一个25x25的区域，用滑动窗看这两个区域什么时候二范数最小
