--- a/学习笔记/跟踪线程.md
+++ b/学习笔记/跟踪线程.md
@@ -213,3 +213,16 @@ ORB-SLAM2
   1. Traking线程中函数Tracking::CreateNewKeyFrame()创建完新关键帧后,会将新创建的关键帧设为参考关键帧.
   2. Tracking线程中函数Tracking::TrackLocalMap()跟踪局部地图过程中调用函数Tracking::UpdateLocalMap(),其中调用函数Tracking::UpdateLocalKeyFrames(),将与当前帧共视程度最高的关键帧设为参考关键帧.
 
+## 局部关键帧和局部地图点
+### mvpLocalKeyFrames 局部关键帧
+生成
+单目、双目初始化
+更新
+UpdateLocalKeyFrames ← UpdateLocalMap ← TrackLocalMap
+
+### 局部地图点
+更新
+UpdateLocalMapPoints ← UpdateLocalMap ← TrackLocalMap
+使用
+SearchLocalPoints ← TrackLocalMap
+
