--- a/学习笔记/跟踪线程.md
+++ b/学习笔记/跟踪线程.md
@@ -1,5 +1,7 @@
 # 跟踪线程
-https://blog.csdn.net/ncepu_Chen/article/details/116785040
+https://blog.csdn.net/ncepu_Chen/article/details/116785040  
+
+跟踪线程不建图，只负责估计局部关键帧的位姿
 ### 跟踪状态
 + eTrackingState
   + SYSTEM_NOT_READY 系统没有准备好,一般就是在启动后加载配置文件和词典文件时候的状态
@@ -33,7 +35,7 @@ https://blog.csdn.net/ncepu_Chen/article/details/116785040
   + ORB-SLAM2
     + 第1帧创建单目初始化器
     + 第2帧如果特征点数大于100则匹配
-    + 如果匹配特征点超过100个则调用初始化器Initialize函数匹配
+    + 如果匹配特征点超过100个则调用初始化器`Initialize`(ORB-SLAM2)或`ReconstructWithTwoViews->Reconstruct`(ORB-SLAM3)函数匹配
 
 + 创建单目初始化局部地图  `CreateInitialMapMonocular()`
   1. 单目初始化的时候，认为参考帧和当前帧都是关键帧，生成关键帧`pKFini`和`pKFcur`
