--- a/学习笔记/地图点.md
+++ b/学习笔记/地图点.md
@@ -59,10 +59,13 @@ https://blog.csdn.net/ncepu_Chen/article/details/116784652
 ![](./MapPoint.png)
 
 + 创建
+  通过三角化(GeometricTools::Triangulate)创建地图点只有两处，单目初始化里算F和H(TwoViewReconstruction::Reconstruct)和LocalMapping::CreateNewMapPoints（通过相邻两个关键帧三角化算地图点）
   1. Tracking线程中初始化过程(Tracking::MonocularInitialization()和Tracking::StereoInitialization())
-  2. Tracking线程中创建新的关键帧(Tracking::CreateNewKeyFrame())
+  2. Tracking线程中创建新的关键帧(Tracking::CreateNewKeyFrame())，单目不在这里产生地图点
   3. Tracking线程中恒速运动模型跟踪(Tracking::TrackWithMotionModel())也会产生临时地图点,但这些临时地图点在跟踪成功后会被马上删除(那跟踪失败怎么办?跟踪失败的话不会产生关键帧,这些地图点也不会被注册进地图)
-  4. LocalMapping线程中创建新地图点的步骤(LocalMapping::CreateNewMapPoints())会将当前关键帧与前一关键帧进行匹配,生成新地图点.
+     使用了上一帧(mLastFrame)的地图点进行投影匹配
+  4. LocalMapping线程中创建新地图点的步骤(LocalMapping::CreateNewMapPoints())会将当前关键帧与前一关键帧进行匹配,生成新地图点.  
+     在LocalMapping中创建的关键帧通过Tracking::mpReferenceKF将新生成的地图点传回Tracking
 + 删除
   1. LocalMapping线程中删除恶劣地图点的步骤(LocalMapping::MapPointCulling()).
   2. 删除关键帧的函数KeyFrame::SetBadFlag()会调用函数MapPoint::EraseObservation()删除地图点对关键帧的观测,若地图点对关键帧的观测少于2,则地图点无法被三角化,就删除该地图点.
