--- a/学习笔记/跟踪线程.md
+++ b/学习笔记/跟踪线程.md
@@ -211,9 +211,9 @@ ORB-SLAM2
   1. Tracking线程中函数Tracking::TrackReferenceKeyFrame()根据参考关键帧估计初始位姿.
   2. 用于初始化新创建的MapPoint的参考帧mpRefKF,函数MapPoint::UpdateNormalAndDepth()中根据参考关键帧mpRefKF更新地图点的平均观测距离.
 
-+ 指定：
-  1. Traking线程中函数Tracking::CreateNewKeyFrame()创建完新关键帧后,会将新创建的关键帧设为参考关键帧.
-  2. Tracking线程中函数Tracking::TrackLocalMap()跟踪局部地图过程中调用函数Tracking::UpdateLocalMap(),其中调用函数Tracking::UpdateLocalKeyFrames(),将与当前帧共视程度最高的关键帧设为参考关键帧.
++ 指定： 
+  1. Tracking 线程中函数Tracking::TrackLocalMap()跟踪局部地图过程中调用函数Tracking::UpdateLocalMap(),其中调用函数Tracking::UpdateLocalKeyFrames(),将与当前帧共视程度最高的关键帧设为参考关键帧.
+  2. Tracking 线程中函数Tracking::CreateNewKeyFrame()创建完新关键帧后,会将新创建的关键帧设为参考关键帧。先TrackLocalMap再CreateNewKeyFrame
 
 ## 局部关键帧和局部地图点
 ### mvpLocalKeyFrames 局部关键帧
@@ -228,3 +228,12 @@ UpdateLocalMapPoints ← UpdateLocalMap ← TrackLocalMap
 使用
 SearchLocalPoints ← TrackLocalMap
 
+### 全局关键帧
+1. mpReferenceKF
+   参考关键帧
+2. mpLastKeyFrame
+   上一关键帧
+   1. IMU预测时候用到
+   2. Tracking::NeedNewKeyFrame 
+3. mlpReferences:std::list<KeyFrame*>
+   用在Tracking::UpdateFrameIMU中，而这个函数是被LoopClosing::MergeLocal2()用的
