--- a/学习笔记/地图点.md
+++ b/学习笔记/地图点.md
@@ -15,6 +15,9 @@ https://blog.csdn.net/ncepu_Chen/article/details/116784652
   + mObservations 存关键帧指针到（地图点在关键帧的id，用一个tuple左右双目分别存）
 + nObs 记录被多少相机检测到
 
++ Track用到的属性
+  + mbTrackInView、mbTrackInViewR （左目/右目）来表示这个地图点要被投影
+
 ## 函数
 
 + 平均观测距离
