--- a/学习笔记/建图线程.md
+++ b/学习笔记/建图线程.md
@@ -52,6 +52,24 @@ Tracking的局部建图用于跟踪
 
 将当前关键帧分别与共视程度最高的前10(单目相机取20)个共视关键帧两两进行特征匹配,生成地图点.
 
+#### 卡方分布
+
+重投影误差e服从均值0，方差Σ的高斯分布。
+
+在ORB-SLAM中假设第0层的标准差为$p=1$个pixel，每层缩放尺度为$s=1.2$，那么，一个在金字塔第 层提取的特征的重投影误差的协方差为
+$$
+\Sigma=(s^n p)^2
+\begin{bmatrix}
+1 & 0 \\
+0 & 1
+\end{bmatrix}
+$$
+对不同层的重投影误差，归一化到N\~(0,1)
+
++ 单目投影为2自由度，在0.05的显著性水平（也就是95%的准确率）下，卡方统计量阈值为5.99
++ 双目投影为3自由度，在0.05的显著性水平（也就是95%的准确率）下，卡方统计量阈值为7.81
+
+
 ### 融合当前关键帧和其共视帧的地图点: SearchInNeighbors()
 
 ### 局部BA优化: Optimizer::LocalBundleAdjustment()
