--- a/学习笔记/帧.md
+++ b/学习笔记/帧.md
@@ -23,11 +23,12 @@
 
 
 ## 函数
+### 构造函数
 
-+ 特征点提取 `ExtractORB()`
+### 特征点提取 `ExtractORB()`
 + 双目 & RGBD预处理
   ![](./matcher.png)
-+ 双目特征点的处理:特征点匹配 `ComputeStereoMatches()`
+### 双目特征点的处理:特征点匹配 `ComputeStereoMatches()`
   初始化的时候做了极线匹配，使得左目上的点在右目中有？  
   老版euroc ros有极线匹配的代码，orb slam3 euroc没有
 
@@ -38,19 +39,28 @@
   5. 离群点筛选: 以平均相似度的2.1倍为标准,筛选离群点.
 + RGBD特征点的处理:根据左目和深度构造虚拟的右目图像 `ComputeStereoFromRGBD`
 
-+ 畸变矫正
+### 畸变矫正
   + 双目相机不需要畸变矫正
     （Example_old/stereo_euroc的主函数所在的文件矫正了(cv::initUndistortRectifyMap)，但是新的Example写在System::settings里），
     所以没有畸变矫正后的右目的特征点
   + 单目和RGBD在这里矫正，使用cv::initUndistortRectifyMap
 
-+ 将特征点分配到图像网格中 `AssignFeaturesToGrid`
+### 将特征点分配到图像网格中 `AssignFeaturesToGrid`
   将每个特征点在mvKeysUn中的索引值放到对应的网格mGrid中 48行64列  
   这里Nleft=-1 Nright对于单目双目RGBD都是-1，两个相机模式不是  
   两个相机模式 id小于Nleft的点被认为是左目，大于等于的被认为是右目。`mvKeysRight``mvGridRight`都是针对两个相机模式加的  
   特征点匹配的时候加速计算，只匹配特征点所在中心3x3的网格  
-+ 构造函数
 
+### `isInFrustum` 判断路标点是否在视野中
+```c++
+bool Frame::isInFrustum(MapPoint *pMP, float viewingCosLimit)
+```
++ 参数
+  + `pMP` 地图点
+  + `viewingCosLimit` 夹角余弦，用于限制地图点和光心连线和法线的夹角
+
+
+# 概念
 ## 参考关键帧
 
 ## 用途
