cmake add openmp

--- a/学习笔记/跟踪线程.md
+++ b/学习笔记/跟踪线程.md
@@ -140,9 +140,12 @@ ORB-SLAM2
         
 
 ## 跟踪局部地图
+优化当前帧位姿和IMU  
+什么是局部地图，就是由`UpdateLocalKeyFrames()`里面选取的关键帧及其地图点组成
+
 ### 变量
-+ 局部关键帧列表std::vector<KeyFrame*>
-+ 局部地图点列表std::vector<MapPoint*>
++ 局部关键帧列表`std::vector<KeyFrame*>`
++ 局部地图点列表`std::vector<MapPoint*>`
 
 ### 函数
 + 局部地图进行跟踪 `TrackLocalMap`
